test/tests/operators/from_mysql/error_tls_invalid_type.txt
error: `tls.cacert` must be a string
  --> tests/operators/from_mysql/error_tls_invalid_type.tql:12:16
   |
12 |            tls={cacert: true}
   |                ^^^^^^^^^^^^^^ 
   |
